Update to publish transform between global and local map

--- a/src/ctf_rover/tmux/tmux_ctf_launch.yaml
+++ b/src/ctf_rover/tmux/tmux_ctf_launch.yaml
@@ -46,4 +46,4 @@ windows:
       # Onboard mighty
       - shell_command:
         - source /home/swarm/code/ctf_ros2_ws/install/setup.bash
-        - sleep 5; ros2 run ctf_rover rover_node --ros-args -p team:="BLUE"
+        - sleep 5; ros2 run ctf_rover rover_node --ros-args -p team:="RED"
